cmake_minimum_required(VERSION 3.20)
project(ValveNetworkTest)

# Set C++ standard
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)


# C++17 ( most used )
# C++23 ( stable version)
# C++20 (Legacy / Conservative Choice)
# C++26 (Cutting Edge) 

# set_target_properties(stable_program PROPERTIES
#     CXX_STANDARD 23
#     CXX_STANDARD_REQUIRED ON
#     CXX_EXTENSIONS OFF
# )


#------------------------------------------------
# CONTENT REPO
#------------------------------------------------
set(VCPKG_TARGET_TRIPLET "x64-windows" CACHE STRING "")
set(VCPKG_MANIFEST_MODE ON)


include(FetchContent)

# Option to use system SDL3 or fetch it
option(USE_SYSTEM_SDL "Use system-installed SDL3" OFF)

# ============== SDL3 ==============
# if(NOT USE_SYSTEM_SDL)
#     FetchContent_Declare(
#         SDL3
#         GIT_REPOSITORY https://github.com/libsdl-org/SDL.git
#         GIT_TAG        release-3.4.8   # Update this as needed
#         GIT_SHALLOW    TRUE
#         GIT_PROGRESS   TRUE
#     )
#     FetchContent_MakeAvailable(SDL3)
# else()
#     find_package(SDL3 REQUIRED CONFIG)
# endif()



# ============== Dear ImGui ==============
# FetchContent_Declare(
#     imgui
#     GIT_REPOSITORY https://github.com/ocornut/imgui.git
#     GIT_TAG        docking          # or v1.91.8 / master
#     GIT_SHALLOW TRUE
#     GIT_PROGRESS TRUE
# )
# FetchContent_MakeAvailable(imgui)

# add_library(imgui STATIC
#     ${imgui_SOURCE_DIR}/imgui.cpp
#     ${imgui_SOURCE_DIR}/imgui_demo.cpp
#     ${imgui_SOURCE_DIR}/imgui_draw.cpp
#     ${imgui_SOURCE_DIR}/imgui_tables.cpp
#     ${imgui_SOURCE_DIR}/imgui_widgets.cpp

#     # Backends
#     ${imgui_SOURCE_DIR}/backends/imgui_impl_sdl3.cpp
#     # ${imgui_SOURCE_DIR}/backends/imgui_impl_opengl3.cpp # opengl 3
#     # ${imgui_SOURCE_DIR}/backends/imgui_impl_sdlrenderer3.cpp
#     ${imgui_SOURCE_DIR}/backends/imgui_impl_sdlgpu3.cpp   # 
# )

# target_include_directories(imgui PUBLIC
#     ${imgui_SOURCE_DIR}
#     ${imgui_SOURCE_DIR}/backends
# )

# target_link_libraries(imgui PUBLIC SDL3::SDL3)

# FetchContent_Declare(
#     raylib
#     GIT_REPOSITORY https://github.com/raysan5/raylib.git
#     GIT_TAG 6.0                    # Latest stable as of 2026
#     GIT_SHALLOW TRUE
#     GIT_PROGRESS TRUE
# )
# # Disable raylib examples and games
# set(BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
# set(BUILD_GAMES OFF CACHE BOOL "" FORCE)
# FetchContent_MakeAvailable(raylib)

# find_package(gamenetworkingsockets CONFIG REQUIRED)

# Automatically download and include Flecs from source
FetchContent_Declare(
    flecs
    GIT_REPOSITORY https://github.com/sandermertens/flecs.git
    GIT_TAG        v4.1.5 # Alternatively use a release tag like "v4.1.1"
    GIT_SHALLOW TRUE
    GIT_PROGRESS TRUE
)
FetchContent_MakeAvailable(flecs)

#------------------------------------------------
# APP SDL
#------------------------------------------------
# add_executable(${PROJECT_NAME} 
#   # main.cpp
#   # src/main.cpp
#   # src/sdl3cpp.cpp
#   # src/sdl3init.cpp
#   # src/sdl3imgui_opengl.cpp
#   # src/sdl3imgui_renderer.cpp
#   # src/sdl3imgui_gpu3.cpp
#   src/sdl3imgui_gpu3_tri.cpp
#   # vsockettest.cpp
#   # networkinputtest.cpp
# )

# # Use either shared or static
# target_link_libraries(${PROJECT_NAME} PRIVATE GameNetworkingSockets::shared)
# target_link_libraries(${PROJECT_NAME} PRIVATE 
#     SDL3::SDL3
#     imgui    
# )
# # Windows-specific: make it a GUI app (no console)
# if(WIN32)
#   # MSYS2
#   # target_link_options(${PROJECT_NAME} PRIVATE -mwindows)
#   # This sets the appropriate GUI subsystem option for all compilers
#   # set_target_properties(${PROJECT_NAME} PROPERTIES WIN32_EXECUTABLE TRUE)
# endif()

# # Optional: copy SDL3 DLLs on Windows (for dynamic linking)
# if(WIN32 AND NOT USE_SYSTEM_SDL)
#     add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
#         COMMAND ${CMAKE_COMMAND} -E copy_if_different
#             $<TARGET_FILE:SDL3::SDL3>
#             $<TARGET_FILE_DIR:${PROJECT_NAME}>
#     )
# endif()

#------------------------------------------------
# APP RAYLIB
#------------------------------------------------
# set(RL_APP_NAME "raylibapp")

# # Main executable
# add_executable(${RL_APP_NAME}
#     src/raylib_window.cpp
# )

# target_link_libraries(${RL_APP_NAME} PRIVATE raylib)



#------------------------------------------------
# APP FLECS
#------------------------------------------------

set(flecs_app myflecs)

# Define your project executable
add_executable(${flecs_app} 
    src/flecstest01.cpp
)

# Link against the flecs static or shared target generated by FetchContent
target_link_libraries(${flecs_app} PRIVATE flecs)

target_include_directories(${flecs_app} PRIVATE 
    ${flecs_SOURCE_DIR}
)

add_custom_command(TARGET ${flecs_app} POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy_if_different
        $<TARGET_FILE:flecs>
        $<TARGET_FILE_DIR:${flecs_app}>
)

#------------------------------------------------
# 
#------------------------------------------------


# MESSAGE(STATUS "DIR: ${gamenetworkingsockets_INCLUDE_DIRS}")
# target_include_directories(${PROJECT_NAME} PRIVATE 
#   ${GAMENETWORKINGSOCKETS_INCLUDE_DIRS}
# )

# find_package(GameNetworkingSockets CONFIG REQUIRED PATHS "${VCPKG_INSTALLED_DIR}/${VCPKG_TARGET_TRIPLET}" NO_DEFAULT_PATH)
# find_package(GameNetworkingSockets CONFIG REQUIRED 
#     PATHS "${CMAKE_CURRENT_SOURCE_DIR}/vcpkg_installed/${VCPKG_TARGET_TRIPLET}/share/gamenetworkingsockets"
#     NO_DEFAULT_PATH)

# find_package(GameNetworkingSockets CONFIG REQUIRED 
#     PATHS "${CMAKE_CURRENT_SOURCE_DIR}/vcpkg_installed/x64-windows/share/gamenetworkingsockets"
#     NO_DEFAULT_PATH)

# target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_20)